--- a/WebApp-01/WebContent/index.html
+++ b/WebApp-01/WebContent/index.html
@@ -22,7 +22,7 @@
 </html> -->
 
 
-<!--  <!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -70,8 +70,7 @@ City : <input type="text" ng-model="city"><br>
 
 
 
-
-<!-- <!DOCTYPE html>
+ <!-- <!DOCTYPE html>
 <html>
 <head>
 <h1>First demo</h1>
@@ -101,10 +100,10 @@ Name : <input type="text" style="background-color:{{color}}">
 
 </div>
 </body>
-</html> -->
+</html>  -->
 
 
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <h1>Third demo</h1>
@@ -113,13 +112,17 @@ Name : <input type="text" style="background-color:{{color}}">
 <script src="js/angular.min.js"></script>
 <script src="js/appModule.js"></script>
 <script src="js/myController.js"></script>
+<link rel="stylesheet" href="js/css/bootstrap.css">
 </head>
 <body ng-app="myApp" ng-controller="myDemoController">
 <h1>Login form</h1><br>
-<form action="next.html" ng-submit = "fun1($event)">
+<form action="GetBook.html" ng-submit = "fun1($event)">
 Username: <input name = "uname" ng-model="un"><div style = "colour : red">{{msg1}}</div><br>
 Password: <input type = "password" name = "pwd" ng-model="pw"><div style = "colour : red">{{msg2}}</div><br>
 <input type="submit" value="login">
 </form>
 </body>
-</html> 
+</html>
+
+
+
