--- a/WebApp-01/WebContent/loginForm.html
+++ b/WebApp-01/WebContent/loginForm.html
@@ -10,7 +10,7 @@
 </head>
 <body ng-app="myApp" ng-controller="myDemoController">
 <h1>Login form</h1><br>
-<form action="next.html" ng-submit = "fun1($event)">
+<form action="GetBook.html" ng-submit = "fun1($event)">
 Username: <input name = "uname" ng-model="un"><div style = "colour : red">{{msg1}}</div><br>
 Password: <input type = "password" name = "pwd" ng-model="pw"><div style = "colour : red">{{msg2}}</div><br>
 <input type="submit" value="login">
